--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -13,7 +13,13 @@ body {
   background: $light-bg;
   color: #333;
   line-height: 1.6;
+  min-height: 100vh;
+  padding: 2rem;
 }
-main{
-    margin-top: 10%;
+
+main {
+  margin-top: 5rem;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
 }
